-changed product controller and product service (3rd demo version)